--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-US">
+  <head>
   <title>
     <meta charset="utf-8"> 
     <title>Min digitala lekpark</title>
+  <link rel="css" href="index.css"/>
   </head>
 <body>
   <h> Napoleons hemliga hemsida  </h>
