--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     </tr>
     
   </div>
-    <div id="phylums"> 
+    <div id="phylums">
+      <img src="/img/rödkamp.jpg"
     </div>
     
 <!--Primär information -->
