--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <td> Fiskar
     <td> Grodor
     <td> Ödlor
-    </tr>
+    </tr> </table>
     
   </div>
-    <div id="phylums">
+    <div id="phylums" style="padding:30px;">
       <img src="/img/rödkamp.jpg"
     </div>
     
