--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
   </div>
     <div id="fiskisar" style="display:flex; justify-content: center; padding:70px 5%; gap: 2%">
       <!--blå dumbokampfisk-->
-      <img src="/img/blåkamp.jpg" style="display:flex;max-width:25%;max-width:25%;min-width:15%;height:auto; border:white 5px solid;border-radius:5px;" alt="Bild på en blå dumbo betta">
+      <img src="img/blåkamp.jpg" style="display:flex;max-width:25%;max-width:25%;min-width:15%;height:auto; border:white 5px solid;border-radius:5px;" alt="Bild på en blå dumbo betta">
 
       <!--neontetra-->
-      <img src="/img/neontetra.jpg" style="display:flex;max-width:25%;max-width:25%;min-width:15%;height:auto; border:white 5px solid;border-radius:5px;" alt="Bild på en vuxen neontetra">
+      <img src="img/neontetra.jpg" style="display:flex;max-width:25%;max-width:25%;min-width:15%;height:auto; border:white 5px solid;border-radius:5px;" alt="Bild på en vuxen neontetra">
 
   <!-- pandapansarmal -->
-      <img src="/img/pandacory.jpg" style="display:flex;max-width:25%;min-width:15%;max-width:25%; border:white 5px solid;border-radius:5px;" alt="Bild på en pandapansarmal">
+      <img src="img/pandacory.jpg" style="display:flex;max-width:25%;min-width:15%;max-width:25%; border:white 5px solid;border-radius:5px;" alt="Bild på en pandapansarmal">
   </div>
     
 <!--Primär information -->
